src/objects/Visit_Team_Info_Channel_Business_Review__c.object
<CustomObject>
    <description>R5 - Technical Object to establish many to many between Visit Report Team &amp; Channel Bussiness Review</description>
    <fields>
        <fullName>Channel_Partner_Business_Review__c</fullName>
        <label>Channel Partner Business Review</label>
        <referenceTo>Channel_Business_Review__c</referenceTo>
        <relationshipLabel>Visit Team Info Channel Business Review</relationshipLabel>
        <relationshipName>Visit_Team_Info_Channel_Business_Review</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <formula>Visit_Report_Team_Member__r.User__r.CompanyName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserJob_Title__c</fullName>
        <formula>Visit_Report_Team_Member__r.User__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UserJob Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Department__c</fullName>
        <formula>Visit_Report_Team_Member__r.User__r.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <formula>Visit_Report_Team_Member__r.User__r.FirstName&amp;&quot; , &quot;&amp;Visit_Report_Team_Member__r.User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Report_Team_Member__c</fullName>
        <label>Visit Report Team Member</label>
        <referenceTo>Visit_Report_Team_Member__c</referenceTo>
        <relationshipLabel>Visit Team Info Channel Business Review</relationshipLabel>
        <relationshipName>Visit_Team_Info_Channel_Business_Review</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Visit Team Info Channel Business Review</label>
    <nameField>
        <displayFormat>VTCBR-{00000}</displayFormat>
        <label>Visit Team Info Channel Business Review</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Team Info Channel Business Review</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>